--- a/mt.html
+++ b/mt.html
@@ -10,5 +10,24 @@
         <h1 style="color:yellow;border:3px solid black;background-color:LightGray">LẮP RÁP PC</h1>
 <h2>Trước khi bắt đầu, bạn sẽ nên để ý một chút về cách thiết lập một khu vực làm việc tốt. Hãy chọn những chiếc bàn phù hợp với vóc dáng. Kê bàn ở những khu vực nhiều ánh sáng và thoáng khí trong phòng và một điều quan trọng nữa là thời gian. Hãy đảm bảo bạn có ít nhất là nửa ngày rảnh rỗi để làm cho xong công việc của chúng ta hôm nay, đó là lắp ráp các thiết bị phần cứng lại với nhau.
          </h2>
-         <pre> <a style=" style="background-color:LightGray">Lắp ráp phần cứng máy tính</a>
-             
+         <pre> 
+   <a style=" style="background-color:LightGray">Lắp ráp phần cứng máy tính</a>
+     Ưu điểm của việc tự lắp ráp máy tính là gì ?
+                Ưu điểm của một máy tính tự lắp ráp rất nhiều, nhưng hãy chắc chắn rằng nó phù hợp với mình nếu không muốn cảm thấy hối tiếc về quyết định tự      build máy tính. Đây là một vài lý do cho điều đó:
+*Có thể dễ dàng nâng cấp máy tính của mình hơn, thay mới các bộ phận để nâng cao hiệu suất.
+*Có thể tự chọn các thành phần để phù hợp với công việc nhất và đảm bảo máy tính chạy nhanh hơn so với một máy tính được cấu hình sẵn (các máy tính này thường được cấu hình làm sao để giảm thiểu giá thành một cách thấp nhất có thể).
+*Có thể ép xung máy tính để đạt được tốc độ cao hơn mà các thành phần của bạn có khả năng.
+*Vì đam mê, niềm vui khi lựa chọn được những bộ phận mình cần và ráp chúng với nhau để tạo nên một chiếc máy tính độc đáo, mang bản sắc riêng của mình.
+Nếu nghĩ rằng tự lắp ráp máy tính có thể rẻ hơn đi mua một máy tính bộ thì điều đó là hoàn toàn sai lầm. Nếu bạn chỉ dùng máy tính ở mức độ vừa phải, hãy mua một máy tính được dựng sẵn tại các cửa hàng, của Dell hay Acer cũng không tệ.
+<h2>Sê-ri này gồm 5 phần, phần nào cũng dài lê thê, nhưng đừng lo lắng, bạn hãy tưởng tượng như mình đang lắp ráp đồ nội thất hoặc bộ LEGO vậy, mọi hướng dẫn đều cố gắng để mọi thứ phù hợp với nhau và đi theo chiều hướng tốt.<h2>
+     1. Hướng dẫn cách chọn linh kiện để lắp ráp máy tính:
+        Trước tiên bạn nên xác định xem bạn muốn lắp ráp máy tính để sử dụng cho công việc gì ? Tùy vào nhu cầu sử dụng để chơi game , làm đồ họa hay làm văn phòng để lựa chọn link kiện phù hợp.Để có một bộ máy tính để bàn hoàn chỉnh thì chắc chắn không thể thiếu những thành phần này để cấu tạo lên một bộ máy hoàn chỉnh.
+        <dl>Vỏ Case: là vỏ thùng máy tính, bảo vệ các thành phần bên trong máy tính, giữ chúng trong một cấu trúc gọn gàng.
+            Bo mạch chủ: Kết nối các thành phần của máy tính mà bạn đang lắp ráp. Đa phần chúng sẽ được gắn hoặc cắm vào đây.
+            CPU: Bộ xử lý trung tâm. Bạn sẽ phải chọn một CPU tương thích với bo mạch chủ, cả về nhà sản xuất lẫn socket của nó.
+            RAM: Cần chọn RAM tương thích với khe RAM của bo mạch chủ.
+            Ổ lưu trữ: Tùy ngân sách và nhu cầu bạn có thể chọn ổ HDD hoặc SSD. SSD nhanh hơn nhiều so với HDD, nhưng HDD thì rẻ hơn và dung lượng lưu trữ lớn hơn.
+            Card màn hình : xử lí hình ảnh , đồ họa ,..
+            Bộ cấp điện: Hay còn gọi là PSU, cung cấp điện cho máy tính và các thành phần khác. Bộ này sẽ được kết nối trực tiếp với bo mạch chủ, CPU, ổ lưu trữ và các thành phần bổ sung khác, nếu cần.
+            Có rất nhiều câu hỏi quay vòng vòng trong đầu bạn, một máy tính thế nào là đủ mạnh? Nên chọn bộ xử lý Intel hay AMD, có cần card đồ họa không, card rời hay on-board? Nguồn điện bao nhiêu wat là đủ?Chúng ta sẽ chia nó thành từng phần để giải đáp những câu hỏi đang ùn lên trong đầu bạn nhé.</dl>
+                                                
