--- a/mt.html
+++ b/mt.html
@@ -30,4 +30,4 @@ Nếu nghĩ rằng tự lắp ráp máy tính có thể rẻ hơn đi mua một 
             Card màn hình : xử lí hình ảnh , đồ họa ,..
             Bộ cấp điện: Hay còn gọi là PSU, cung cấp điện cho máy tính và các thành phần khác. Bộ này sẽ được kết nối trực tiếp với bo mạch chủ, CPU, ổ lưu trữ và các thành phần bổ sung khác, nếu cần.
             Có rất nhiều câu hỏi quay vòng vòng trong đầu bạn, một máy tính thế nào là đủ mạnh? Nên chọn bộ xử lý Intel hay AMD, có cần card đồ họa không, card rời hay on-board? Nguồn điện bao nhiêu wat là đủ?Chúng ta sẽ chia nó thành từng phần để giải đáp những câu hỏi đang ùn lên trong đầu bạn nhé.</dl>
-                                                
+  <p><a href="https://www.w3schools.com" target="iframe_a">W3Schools.com</a></p>                                              
