--- a/mt.html
+++ b/mt.html
@@ -7,11 +7,12 @@
     <title>
     Trang web hướng dẫn lắp pc. </title>
      <body>
-        <h1 style="color:yellow;border:3px solid black;background-color:LightGray">LẮP RÁP PC</h1>
+        <h1 style="color:yellow;border:3px solid black;background-color:LightGray">CÁCH CHỌN BỘ PHẬN PC</h1>
 <h2>Trước khi bắt đầu, bạn sẽ nên để ý một chút về cách thiết lập một khu vực làm việc tốt. Hãy chọn những chiếc bàn phù hợp với vóc dáng. Kê bàn ở những khu vực nhiều ánh sáng và thoáng khí trong phòng và một điều quan trọng nữa là thời gian. Hãy đảm bảo bạn có ít nhất là nửa ngày rảnh rỗi để làm cho xong công việc của chúng ta hôm nay, đó là lắp ráp các thiết bị phần cứng lại với nhau.
          </h2>
+         <p><a href="https://duchuy0911.github.io/html/" target="iframe_a">Các bộ phận máy tính:</a></p> 
          <pre> 
-   <a style=" style="background-color:LightGray">Lắp ráp phần cứng máy tính</a>
+   <a style=" style="background-color:LightGray">Cách chọn tốt các thành phần máy tính cho người muốn lắp ráp.</a>
      Ưu điểm của việc tự lắp ráp máy tính là gì ?
                 Ưu điểm của một máy tính tự lắp ráp rất nhiều, nhưng hãy chắc chắn rằng nó phù hợp với mình nếu không muốn cảm thấy hối tiếc về quyết định tự      build máy tính. Đây là một vài lý do cho điều đó:
 *Có thể dễ dàng nâng cấp máy tính của mình hơn, thay mới các bộ phận để nâng cao hiệu suất.
@@ -30,4 +31,7 @@ Nếu nghĩ rằng tự lắp ráp máy tính có thể rẻ hơn đi mua một 
             Card màn hình : xử lí hình ảnh , đồ họa ,..
             Bộ cấp điện: Hay còn gọi là PSU, cung cấp điện cho máy tính và các thành phần khác. Bộ này sẽ được kết nối trực tiếp với bo mạch chủ, CPU, ổ lưu trữ và các thành phần bổ sung khác, nếu cần.
             Có rất nhiều câu hỏi quay vòng vòng trong đầu bạn, một máy tính thế nào là đủ mạnh? Nên chọn bộ xử lý Intel hay AMD, có cần card đồ họa không, card rời hay on-board? Nguồn điện bao nhiêu wat là đủ?Chúng ta sẽ chia nó thành từng phần để giải đáp những câu hỏi đang ùn lên trong đầu bạn nhé.</dl>
-  <p><a href="https://duchuy0911.github.io/html/" target="iframe_a">Các bộ phận máy tính.</a></p>                                              
+     2.Hướng dẫn chọn CPU – Bộ vi xử lý phù hợp 
+Khi bắt đầu xây dựng một bộ PC, điều đầu tiên bạn phải quyết định là mình sẽ mua CPU nào. Nhiều người sẽ khuyên rằng nên chọn Bo mạch chủ (Mainboard) trước, nhưng chúng tôi khuyến nghị CPU mới là thứ cần được ưu tiên chọn đầu tiên khi Build PC. Bởi vì thương hiệu và socket của CPU quyết định loại mainboard nào phù hợp, tiếp sau đó mới mua RAM, VGA, PSU…
+
+                                         
