--- a/mt.html
+++ b/mt.html
@@ -23,15 +23,17 @@ Nếu nghĩ rằng tự lắp ráp máy tính có thể rẻ hơn đi mua một 
 <h2>Sê-ri này gồm 5 phần, phần nào cũng dài lê thê, nhưng đừng lo lắng, bạn hãy tưởng tượng như mình đang lắp ráp đồ nội thất hoặc bộ LEGO vậy, mọi hướng dẫn đều cố gắng để mọi thứ phù hợp với nhau và đi theo chiều hướng tốt.<h2>
      1. Hướng dẫn cách chọn linh kiện để lắp ráp máy tính:
         Trước tiên bạn nên xác định xem bạn muốn lắp ráp máy tính để sử dụng cho công việc gì ? Tùy vào nhu cầu sử dụng để chơi game , làm đồ họa hay làm văn phòng để lựa chọn link kiện phù hợp.Để có một bộ máy tính để bàn hoàn chỉnh thì chắc chắn không thể thiếu những thành phần này để cấu tạo lên một bộ máy hoàn chỉnh.
-        <dl>Vỏ Case: là vỏ thùng máy tính, bảo vệ các thành phần bên trong máy tính, giữ chúng trong một cấu trúc gọn gàng.
-            Bo mạch chủ: Kết nối các thành phần của máy tính mà bạn đang lắp ráp. Đa phần chúng sẽ được gắn hoặc cắm vào đây.
-            CPU: Bộ xử lý trung tâm. Bạn sẽ phải chọn một CPU tương thích với bo mạch chủ, cả về nhà sản xuất lẫn socket của nó.
-            RAM: Cần chọn RAM tương thích với khe RAM của bo mạch chủ.
-            Ổ lưu trữ: Tùy ngân sách và nhu cầu bạn có thể chọn ổ HDD hoặc SSD. SSD nhanh hơn nhiều so với HDD, nhưng HDD thì rẻ hơn và dung lượng lưu trữ lớn hơn.
-            Card màn hình : xử lí hình ảnh , đồ họa ,..
-            Bộ cấp điện: Hay còn gọi là PSU, cung cấp điện cho máy tính và các thành phần khác. Bộ này sẽ được kết nối trực tiếp với bo mạch chủ, CPU, ổ lưu trữ và các thành phần bổ sung khác, nếu cần.
+                                          <img src="img/pc41.jpg" height="700" width="500">
+  <ul> <li>Vỏ Case: là vỏ thùng máy tính, bảo vệ các thành phần bên trong máy tính, giữ chúng trong một cấu trúc gọn gàng.</li>
+       <li>Bo mạch chủ: Kết nối các thành phần của máy tính mà bạn đang lắp ráp. Đa phần chúng sẽ được gắn hoặc cắm vào đây.</li>
+       <li>CPU: Bộ xử lý trung tâm. Bạn sẽ phải chọn một CPU tương thích với bo mạch chủ, cả về nhà sản xuất lẫn socket của nó.</li>
+       <li>RAM: Cần chọn RAM tương thích với khe RAM của bo mạch chủ.</li>
+       <li>Ổ lưu trữ: Tùy ngân sách và nhu cầu bạn có thể chọn ổ HDD hoặc SSD. SSD nhanh hơn nhiều so với HDD, nhưng HDD thì rẻ hơn và dung lượng lưu trữ lớn hơn.</li>
+       <li>Card màn hình : xử lí hình ảnh , đồ họa ,..</li>
+       <li>Bộ cấp điện: Hay còn gọi là PSU, cung cấp điện cho máy tính và các thành phần khác. Bộ này sẽ được kết nối trực tiếp với bo mạch chủ, CPU, ổ lưu trữ và các thành phần bổ sung khác, nếu cần.</li>
             Có rất nhiều câu hỏi quay vòng vòng trong đầu bạn, một máy tính thế nào là đủ mạnh? Nên chọn bộ xử lý Intel hay AMD, có cần card đồ họa không, card rời hay on-board? Nguồn điện bao nhiêu wat là đủ?Chúng ta sẽ chia nó thành từng phần để giải đáp những câu hỏi đang ùn lên trong đầu bạn nhé.</dl>
      2.Hướng dẫn chọn CPU – Bộ vi xử lý phù hợp 
          Khi bắt đầu xây dựng một bộ PC, điều đầu tiên bạn phải quyết định là mình sẽ mua CPU nào. Nhiều người sẽ khuyên rằng nên chọn Bo mạch chủ (Mainboard) trước, nhưng chúng tôi khuyến nghị CPU mới là thứ cần được ưu tiên chọn đầu tiên khi Build PC. Bởi vì thương hiệu và socket của CPU quyết định loại mainboard nào phù hợp, tiếp sau đó mới mua RAM, VGA, PSU…
+          Chúng tôi sẽ hướng dẫn qua các bước để chọn được CPU phù hợp nhu cầu của bạn và những thuật ngữ liên quan.
+          Bộ vi xử lý hay còn gọi là CPU (The Central Processing Unit) được ví như “Bộ não” của máy tính. CPU thực hiện tất cả tác vụ và xử lý hệ thống thông tin hiệu quả nhất có thể. Nếu mà nói thêm về CPU 2 ngày nữa chưa đọc hết nên chúng tôi tập trung để làm thế nào chọn được CPU phù hợp nhất cho yêu cầu Build PC của bạn. Hãy bắt đầu với một số khái niệm để biết mà chém gió với tư vấn viên khi mua hỏi mua CPU.
 
-                                         
