--- a/mt.html
+++ b/mt.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         <link rel="stylesheet" href="styles.css">
     <title>
-    Trang web hướng dẫn lắp pc. </title>
+    Trang web giới thiệu cách chọn các bộ phận pc. </title>
      <body>
         <h1 style="color:yellow;border:3px solid black;background-color:LightGray">CÁCH CHỌN BỘ PHẬN PC</h1>
 <h2>Trước khi bắt đầu, bạn sẽ nên để ý một chút về cách thiết lập một khu vực làm việc tốt. Hãy chọn những chiếc bàn phù hợp với vóc dáng. Kê bàn ở những khu vực nhiều ánh sáng và thoáng khí trong phòng và một điều quan trọng nữa là thời gian. Hãy đảm bảo bạn có ít nhất là nửa ngày rảnh rỗi để làm cho xong công việc của chúng ta hôm nay, đó là lắp ráp các thiết bị phần cứng lại với nhau.
