--- a/thu/pl.html
+++ b/thu/pl.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset=utf-8>
-        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="thu/img./favicon.ico">
         <link rel="stylesheet" href="styles.css">
     <title>
     Trang web giới thiệu cách chọn các bộ phận pc. </title>
