--- a/thu/pl.html
+++ b/thu/pl.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset=utf-8>
-        <link rel="icon" type="image/x-icon" href="thu/img./favicon.ico">
+        <link rel="icon" type="image/x-icon" href="img./favicon.ico">
         <link rel="stylesheet" href="styles.css">
     <title>
     Trang web giới thiệu cách chọn các bộ phận pc. </title>
@@ -23,7 +23,7 @@ Nếu nghĩ rằng tự lắp ráp máy tính có thể rẻ hơn đi mua một 
 <h2>Sê-ri này gồm 5 phần, phần nào cũng dài lê thê, nhưng đừng lo lắng, bạn hãy tưởng tượng như mình đang lắp ráp đồ nội thất hoặc bộ LEGO vậy, mọi hướng dẫn đều cố gắng để mọi thứ phù hợp với nhau và đi theo chiều hướng tốt.<h2>
      1. Hướng dẫn cách chọn linh kiện để lắp ráp máy tính:
         Trước tiên bạn nên xác định xem bạn muốn lắp ráp máy tính để sử dụng cho công việc gì ? Tùy vào nhu cầu sử dụng để chơi game , làm đồ họa hay làm văn phòng để lựa chọn link kiện phù hợp.Để có một bộ máy tính để bàn hoàn chỉnh thì chắc chắn không thể thiếu những thành phần này để cấu tạo lên một bộ máy hoàn chỉnh.
-                                          <img src="thu/img./pc41.jpg" height="700" width="500">
+                                          <img src="img./pc41.jpg" height="700" width="500">
   <ul> <li>Vỏ Case: là vỏ thùng máy tính, bảo vệ các thành phần bên trong máy tính, giữ chúng trong một cấu trúc gọn gàng.</li>
        <li>Bo mạch chủ: Kết nối các thành phần của máy tính mà bạn đang lắp ráp. Đa phần chúng sẽ được gắn hoặc cắm vào đây.</li>
        <li>CPU: Bộ xử lý trung tâm. Bạn sẽ phải chọn một CPU tương thích với bo mạch chủ, cả về nhà sản xuất lẫn socket của nó.</li>
@@ -36,7 +36,7 @@ Nếu nghĩ rằng tự lắp ráp máy tính có thể rẻ hơn đi mua một 
          Khi bắt đầu xây dựng một bộ PC, điều đầu tiên bạn phải quyết định là mình sẽ mua CPU nào. Nhiều người sẽ khuyên rằng nên chọn Bo mạch chủ (Mainboard) trước, nhưng chúng tôi khuyến nghị CPU mới là thứ cần được ưu tiên chọn đầu tiên khi Build PC. Bởi vì thương hiệu và socket của CPU quyết định loại mainboard nào phù hợp, tiếp sau đó mới mua RAM, VGA, PSU…
           Chúng tôi sẽ hướng dẫn qua các bước để chọn được CPU phù hợp nhu cầu của bạn và những thuật ngữ liên quan.
           Bộ vi xử lý hay còn gọi là CPU (The Central Processing Unit) được ví như “Bộ não” của máy tính. CPU thực hiện tất cả tác vụ và xử lý hệ thống thông tin hiệu quả nhất có thể. Nếu mà nói thêm về CPU 2 ngày nữa chưa đọc hết nên chúng tôi tập trung để làm thế nào chọn được CPU phù hợp nhất cho yêu cầu Build PC của bạn. Hãy bắt đầu với một số khái niệm để biết mà chém gió với tư vấn viên khi mua hỏi mua CPU.
-                                          <img src="thu/img./PC42.jpg" height="700" width="500">
+                                          <img src="img./PC42.jpg" height="700" width="500">
          Các thuật ngữ cần biết:
 
             Socket – là cổng cắm của CPU vào mainboard. Tùy dòng CPU và hãng sản xuất sẽ có socket khác nhau. Bạn cần để ý loại socket của CPU để sau đó mua mainboard phù hợp. Hiện nay, các CPU Intel sử dụng socket LGA1150 , LGA1151, LGA2011-3, LGA2066, LGA1151-v2 và socket FM2+, AM3+, AM4+ của CPU AMD.
@@ -62,7 +62,7 @@ Nếu nghĩ rằng tự lắp ráp máy tính có thể rẻ hơn đi mua một 
             Loại Socket của CPU
                 Đây chính là loại socket của CPU bạn chọn. Mỗi loại CPU đều có 1 loại socket duy nhất vừa hợp với main. Nên bạn cần chắc chắn chọn đúng main phù hợp với CPU.
                 Ví dụ: Nếu đã chọn CPU AMD có socket loại AM3+ thì cần chọn 1 loại main cũng có socket AM3+. Tương tự với CPU Intel có socket LGA 1151 cần main có socket 1151.
-                                            <img src="thu/img./pc43.jpg" height="700" width="500">
+                                            <img src="img./pc43.jpg" height="700" width="500">
         <!DOCTYPE html>
 <html>
     <head>
@@ -88,7 +88,7 @@ Nếu nghĩ rằng tự lắp ráp máy tính có thể rẻ hơn đi mua một 
 <h2>Sê-ri này gồm 5 phần, phần nào cũng dài lê thê, nhưng đừng lo lắng, bạn hãy tưởng tượng như mình đang lắp ráp đồ nội thất hoặc bộ LEGO vậy, mọi hướng dẫn đều cố gắng để mọi thứ phù hợp với nhau và đi theo chiều hướng tốt.<h2>
      1. Hướng dẫn cách chọn linh kiện để lắp ráp máy tính:
         Trước tiên bạn nên xác định xem bạn muốn lắp ráp máy tính để sử dụng cho công việc gì ? Tùy vào nhu cầu sử dụng để chơi game , làm đồ họa hay làm văn phòng để lựa chọn link kiện phù hợp.Để có một bộ máy tính để bàn hoàn chỉnh thì chắc chắn không thể thiếu những thành phần này để cấu tạo lên một bộ máy hoàn chỉnh.
-                                          <img src="img/pc41.jpg" height="700" width="500">
+                                          <img src="img./pc41.jpg" height="700" width="500">
   <ul> <li>Vỏ Case: là vỏ thùng máy tính, bảo vệ các thành phần bên trong máy tính, giữ chúng trong một cấu trúc gọn gàng.</li>
        <li>Bo mạch chủ: Kết nối các thành phần của máy tính mà bạn đang lắp ráp. Đa phần chúng sẽ được gắn hoặc cắm vào đây.</li>
        <li>CPU: Bộ xử lý trung tâm. Bạn sẽ phải chọn một CPU tương thích với bo mạch chủ, cả về nhà sản xuất lẫn socket của nó.</li>
@@ -101,7 +101,7 @@ Nếu nghĩ rằng tự lắp ráp máy tính có thể rẻ hơn đi mua một 
          Khi bắt đầu xây dựng một bộ PC, điều đầu tiên bạn phải quyết định là mình sẽ mua CPU nào. Nhiều người sẽ khuyên rằng nên chọn Bo mạch chủ (Mainboard) trước, nhưng chúng tôi khuyến nghị CPU mới là thứ cần được ưu tiên chọn đầu tiên khi Build PC. Bởi vì thương hiệu và socket của CPU quyết định loại mainboard nào phù hợp, tiếp sau đó mới mua RAM, VGA, PSU…
           Chúng tôi sẽ hướng dẫn qua các bước để chọn được CPU phù hợp nhu cầu của bạn và những thuật ngữ liên quan.
           Bộ vi xử lý hay còn gọi là CPU (The Central Processing Unit) được ví như “Bộ não” của máy tính. CPU thực hiện tất cả tác vụ và xử lý hệ thống thông tin hiệu quả nhất có thể. Nếu mà nói thêm về CPU 2 ngày nữa chưa đọc hết nên chúng tôi tập trung để làm thế nào chọn được CPU phù hợp nhất cho yêu cầu Build PC của bạn. Hãy bắt đầu với một số khái niệm để biết mà chém gió với tư vấn viên khi mua hỏi mua CPU.
-                                          <img src="img/PC42.jpg" height="700" width="500">
+                                          <img src="img./PC42.jpg" height="700" width="500">
          Các thuật ngữ cần biết:
 <dl>
         <li>Socket – là cổng cắm của CPU vào mainboard. Tùy dòng CPU và hãng sản xuất sẽ có socket khác nhau. Bạn cần để ý loại socket của CPU để sau đó mua mainboard phù hợp. Hiện nay, các CPU Intel sử dụng socket LGA1150 , LGA1151, LGA2011-3, LGA2066, LGA1151-v2 và socket FM2+, AM3+, AM4+ của CPU AMD.</li>
